--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <ul class="nav-dropdown-items">
 
                             <li class="nav-item">
-                                <a href="{{ route(" admin.permissions.index") }}"
-                                    class="nav-link {{ request()->is('admin/permissions') || request()->is('admin/permissions/*') ? 'active' : '' }}">
+                                <a href="#"
+                                    class="nav-link ">
                                     <i class="fa-unlock fa nav-icon">
 
                                     </i>
@@ -89,8 +89,8 @@
                             </li>
 
                             <li class="nav-item">
-                                <a href="{{ route(" admin.roles.index") }}"
-                                    class="nav-link {{ request()->is('admin/roles') || request()->is('admin/roles/*') ? 'active' : '' }}">
+                                <a href="#"
+                                    class="nav-link ">
                                     <i class="fa fa-briefcase nav-icon">
 
                                     </i>
@@ -99,8 +99,8 @@
                             </li>
 
                             <li class="nav-item">
-                                <a href="{{ route(" admin.users.index") }}"
-                                    class="nav-link {{ request()->is('admin/users') || request()->is('admin/users/*') ? 'active' : '' }}">
+                                <a href="#"
+                                    class="nav-link ">
                                     <i class="fa fa-user nav-icon">
 
                                     </i>
@@ -109,8 +109,8 @@
                             </li>
 
                             <li class="nav-item">
-                                <a href="{{ route(" admin.audit-logs.index") }}"
-                                    class="nav-link {{ request()->is('admin/audit-logs') || request()->is('admin/audit-logs/*') ? 'active' : '' }}">
+                                <a href="#"
+                                    class="nav-link ">
                                     <i class="fa fa-file nav-icon">
 
                                     </i>
@@ -122,8 +122,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="{{ route(" admin.statuses.index") }}"
-                            class="nav-link {{ request()->is('admin/statuses') || request()->is('admin/statuses/*') ? 'active' : '' }}">
+                        <a href="#"
+                            class="nav-link active">
                             <i class="fa fa-cogs nav-icon">
 
                             </i>
@@ -132,8 +132,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="{{ route(" admin.priorities.index") }}"
-                            class="nav-link {{ request()->is('admin/priorities') || request()->is('admin/priorities/*') ? 'active' : '' }}">
+                        <a href="#"
+                            class="nav-link ">
                             <i class="fa fa-cogs nav-icon">
 
                             </i>
@@ -142,8 +142,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="{{ route(" admin.categories.index") }}"
-                            class="nav-link {{ request()->is('admin/categories') || request()->is('admin/categories/*') ? 'active' : '' }}">
+                        <a href="#"
+                            class="nav-link ">
                             <i class="fa fa-tags nav-icon">
 
                             </i>
@@ -152,8 +152,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="{{ route(" admin.tickets.index") }}"
-                            class="nav-link {{ request()->is('admin/tickets') || request()->is('admin/tickets/*') ? 'active' : '' }}">
+                        <a href="#"
+                            class="nav-link ">
                             <i class="fa fa-question-circle nav-icon">
 
                             </i>
@@ -163,8 +163,8 @@
 
 
                     <li class="nav-item">
-                        <a href="{{ route(" admin.comments.index") }}"
-                            class="nav-link {{ request()->is('admin/comments') || request()->is('admin/comments/*') ? 'active' : '' }}">
+                        <a href="#"
+                            class="nav-link ">
                             <i class="fa fa-comment nav-icon">
 
                             </i>
@@ -193,8 +193,8 @@
 
                 <div style="margin-bottom: 10px;" class="row">
                     <div class="col-lg-12">
-                        <a class="btn btn-success" href="http://127.0.0.1:8000/admin/tickets/create">
-                            Add Ticket
+                        <a class="btn btn-success" href="#">
+                            Add status
                         </a>
                     </div>
                 </div>
@@ -211,9 +211,7 @@
 
 
         </main>
-        <form id="logoutform" action="{{ route('logout') }}" method="POST" style="display: none;">
-            {{ csrf_field() }}
-        </form>
+        
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
